care/force-app/main/default/objects/StripePaymentIntentResponse__c/StripePaymentIntentResponse__c.object-meta.xml
<CustomObject>
    <label>StripePaymentIntentResponse</label>
    <nameField>
        <label>StripePaymentIntentResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StripePaymentIntentResponse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>