care/force-app/main/default/objects/StripePaymentIntentResponse__c/fields/amountCapturable__c.field-meta.xml
<CustomField>
    <fullName>amountCapturable__c</fullName>
    <label>amountCapturable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>