care/force-app/main/default/objects/StripePaymentIntentResponse__c/fields/captured__c.field-meta.xml
<CustomField>
    <fullName>captured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>captured</label>
    <type>Checkbox</type>
</CustomField>