care/force-app/main/default/objects/StripePaymentIntentResponse__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <label>CustomerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>