care/force-app/main/default/objects/StripePaymentIntentResponse__c/fields/LatestCharge__c.field-meta.xml
<CustomField>
    <fullName>LatestCharge__c</fullName>
    <label>LatestCharge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>